[gd_scene load_steps=27 format=2]

[ext_resource path="res://CoffeeMachine/CoffeeMachine.gd" type="Script" id=1]
[ext_resource path="res://CoffeeMachine/CoffeeContainerFull.svg" type="Texture" id=2]
[ext_resource path="res://CoffeeMachine/milk.svg" type="Texture" id=3]
[ext_resource path="res://CoffeeMachine/MilkController.svg" type="Texture" id=4]
[ext_resource path="res://CoffeeMachine/teapot.svg" type="Texture" id=5]
[ext_resource path="res://CoffeeMachine/Needle.svg" type="Texture" id=6]
[ext_resource path="res://CoffeeMachine/CoffeeContainer.svg" type="Texture" id=7]
[ext_resource path="res://CoffeeMachine/machine.svg" type="Texture" id=8]
[ext_resource path="res://CoffeeMachine/CoffeeSmasher.svg" type="Texture" id=9]
[ext_resource path="res://Common/ProgressBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://CoffeeMachine/Teapot.gd" type="Script" id=11]
[ext_resource path="res://CoffeeMachine/CoffeeContainer.gd" type="Script" id=12]
[ext_resource path="res://Cup/CupButton.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 116.5, 74 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 98, 103 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 116.5, 130 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 135.75, 69.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 99, 96 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 60, 93 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 183.5, 49.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 121, 107 )

[sub_resource type="Animation" id=11]
resource_name = "CoffeeFill"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("CoffeeMilkMachine/Coffee/TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoffeeMilkMachine/Coffee/TextureProgress:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CoffeeContainer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "lock"
}, {
"args": [  ],
"method": "unlock"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "CoffeeSmash"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CoffeeSmasherMachine/TextureProgress:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoffeeSmasherMachine/TextureProgress:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CoffeeContainer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "lock"
}, {
"args": [  ],
"method": "unlock"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CoffeeContainer/Full:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "FillMilk"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("MilkMachine/TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MilkMachine/TextureProgress:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("MilkPot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fill"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "HeatMilk"
length = 0.7
tracks/0/type = "method"
tracks/0/path = NodePath("MilkPot")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "lock"
}, {
"args": [  ],
"method": "unlock"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoffeeMilkMachine/Milk/TextureProgress:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CoffeeMilkMachine/Milk/TextureProgress:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_active_milk_controller"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("MilkPot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "heat"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MilkMachine/TextureProgress:min_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MilkMachine/TextureProgress:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MilkMachine/TextureProgress:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CoffeeMilkMachine/Milk/TextureProgress:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CoffeeMilkMachine/Milk/TextureProgress:value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CoffeeMilkMachine/Coffee/TextureProgress:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CoffeeMilkMachine/Coffee/TextureProgress:value")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CoffeeSmasherMachine/TextureProgress:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CoffeeSmasherMachine/TextureProgress:value")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CoffeeContainer/Full:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="CoffeeMachine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 408.0
margin_top = 265.0
margin_right = 408.0
margin_bottom = 265.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="MilkController" type="TextureButton" parent="."]
margin_left = 298.0
margin_top = -459.0
margin_right = 338.0
margin_bottom = -228.0
rect_pivot_offset = Vector2( 21, 226 )
texture_normal = ExtResource( 4 )

[node name="CoffeeMilkMachine" type="Sprite" parent="."]
position = Vector2( -690, -210 )
texture = ExtResource( 8 )
offset = Vector2( 690, 210 )

[node name="Coffee" type="Node2D" parent="CoffeeMilkMachine"]

[node name="RistrettoButton" type="Button" parent="CoffeeMilkMachine/Coffee"]
margin_left = 494.0
margin_top = -4.0
margin_right = 536.0
margin_bottom = 38.0
flat = true

[node name="ExpressoButton" type="Button" parent="CoffeeMilkMachine/Coffee"]
margin_left = 556.0
margin_top = -4.0
margin_right = 598.0
margin_bottom = 38.0
flat = true

[node name="LungoButton" type="Button" parent="CoffeeMilkMachine/Coffee"]
margin_left = 620.0
margin_top = -4.0
margin_right = 662.0
margin_bottom = 38.0
flat = true

[node name="ContainerArea2D" type="Area2D" parent="CoffeeMilkMachine/Coffee"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeMilkMachine/Coffee/ContainerArea2D"]
position = Vector2( 550.5, 166 )
shape = SubResource( 3 )

[node name="TextureProgress" parent="CoffeeMilkMachine/Coffee" instance=ExtResource( 10 )]
visible = false
margin_left = 412.0
margin_top = 8.0
margin_right = 734.0
margin_bottom = 40.0

[node name="ContainerPosition2D" type="Position2D" parent="CoffeeMilkMachine/Coffee"]
position = Vector2( 304, 108 )

[node name="CupArea2D" type="Area2D" parent="CoffeeMilkMachine/Coffee"]
position = Vector2( 514, 302 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeMilkMachine/Coffee/CupArea2D"]
position = Vector2( 56, -41 )
shape = SubResource( 13 )

[node name="CupPosition2D" type="Position2D" parent="CoffeeMilkMachine/Coffee"]
position = Vector2( 502, 222 )

[node name="Milk" type="Node2D" parent="CoffeeMilkMachine"]

[node name="Needle" type="Sprite" parent="CoffeeMilkMachine/Milk"]
position = Vector2( 833, -24 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="CoffeeMilkMachine/Milk"]
position = Vector2( 268, 144 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeMilkMachine/Milk/Area2D"]
position = Vector2( 576, 114 )
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="CoffeeMilkMachine/Milk"]
position = Vector2( 732, 174 )

[node name="TextureProgress" parent="CoffeeMilkMachine/Milk" instance=ExtResource( 10 )]
visible = false
margin_left = 702.0
margin_top = 138.0
margin_right = 1024.0
margin_bottom = 170.0
value = 0.0
__meta__ = {
"_editor_description_": ""
}

[node name="CoffeeSmasherMachine" type="Sprite" parent="."]
position = Vector2( -482, 9 )
texture = ExtResource( 9 )

[node name="TextureProgress" parent="CoffeeSmasherMachine" instance=ExtResource( 10 )]
visible = false
margin_left = -170.0
margin_top = 145.0
margin_right = 152.0
margin_bottom = 177.0

[node name="Position2D" type="Position2D" parent="CoffeeSmasherMachine"]
position = Vector2( -266, 183 )

[node name="Area2D" type="Area2D" parent="CoffeeSmasherMachine"]
position = Vector2( -5, 192 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeSmasherMachine/Area2D"]
shape = SubResource( 1 )

[node name="MilkMachine" type="TextureButton" parent="."]
margin_left = 518.0
margin_top = -360.0
margin_right = 899.0
margin_bottom = 344.0
texture_normal = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="MilkMachine"]
position = Vector2( 106, 534 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MilkMachine/Area2D"]
position = Vector2( 89, 86 )
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="MilkMachine"]
position = Vector2( 106, 534 )

[node name="TextureProgress" parent="MilkMachine" instance=ExtResource( 10 )]
visible = false
margin_left = 42.0
margin_top = 552.0
margin_right = 364.0
margin_bottom = 584.0

[node name="CupOpened" parent="." instance=ExtResource( 15 )]
margin_left = 554.0
margin_top = 332.0
margin_right = 681.0
margin_bottom = 508.0

[node name="CupOpenedArea2D" type="Area2D" parent="CupOpened"]
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CupOpened/CupOpenedArea2D"]
position = Vector2( 64, 83 )
shape = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="CoffeeContainer" type="TextureButton" parent="."]
margin_left = -482.0
margin_top = 408.0
margin_right = -127.0
margin_bottom = 509.0
rect_pivot_offset = Vector2( 174, 39 )
texture_normal = ExtResource( 7 )
script = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="CoffeeContainer"]
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeContainer/Area2D"]
position = Vector2( 173.5, 42.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Full" type="Sprite" parent="CoffeeContainer"]
visible = false
position = Vector2( 280, 2 )
texture = ExtResource( 2 )

[node name="MilkPot" type="TextureButton" parent="."]
margin_left = 146.0
margin_top = 350.0
margin_right = 389.0
margin_bottom = 561.0
texture_normal = ExtResource( 5 )
script = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="MilkPot"]
position = Vector2( 118, 104 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MilkPot/Area2D"]
position = Vector2( -1, -1 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CoffeeFill = SubResource( 11 )
anims/CoffeeSmash = SubResource( 10 )
anims/FillMilk = SubResource( 7 )
anims/HeatMilk = SubResource( 9 )
anims/RESET = SubResource( 8 )

[connection signal="pressed" from="MilkController" to="." method="_on_MilkController_pressed"]
[connection signal="pressed" from="CoffeeMilkMachine/Coffee/RistrettoButton" to="." method="_on_Ristretto_pressed"]
[connection signal="pressed" from="CoffeeMilkMachine/Coffee/ExpressoButton" to="." method="_on_Expresso_pressed"]
[connection signal="pressed" from="CoffeeMilkMachine/Coffee/LungoButton" to="." method="_on_Lungo_pressed"]
[connection signal="pressed" from="MilkMachine" to="." method="_on_Milk_pressed"]
[connection signal="button_down" from="CupOpened" to="." method="_on_CupOpened_button_down"]
[connection signal="button_up" from="CupOpened" to="." method="_on_CupOpened_button_up"]
[connection signal="area_entered" from="CupOpened/CupOpenedArea2D" to="." method="_on_CupOpened_area_entered"]
[connection signal="area_exited" from="CupOpened/CupOpenedArea2D" to="." method="_on_CupOpened_area_exited"]
[connection signal="button_down" from="CoffeeContainer" to="." method="_on_CoffeeContainer_button_down"]
[connection signal="button_up" from="CoffeeContainer" to="." method="_on_CoffeeContainer_button_up"]
[connection signal="area_entered" from="CoffeeContainer/Area2D" to="." method="_on_CoffeeContainer_area_entered"]
[connection signal="area_exited" from="CoffeeContainer/Area2D" to="." method="_on_CoffeeContainer_area_exited"]
[connection signal="button_down" from="MilkPot" to="." method="_on_MilkPot_button_down"]
[connection signal="button_up" from="MilkPot" to="." method="_on_MilkPot_button_up"]
[connection signal="area_entered" from="MilkPot/Area2D" to="." method="_on_MilkPot_area_entered"]
[connection signal="area_exited" from="MilkPot/Area2D" to="." method="_on_MilkPot_area_exited"]
